@@ -1,94 +1,90 @@
 # CLAUDE.md
 
-This file provides guidance to Claude Code (claude.ai/code) when working with code in this repository.
-
 ## Build Commands
 
-- `./gradlew build`: Build the entire project
-- `./gradlew server-admin:bootRun`: Start the Spring Boot admin server
-- `./gradlew clean build`: Clean build the project
-- `./gradlew test`: Run all tests
-- `./gradlew :server-admin:test`: Run tests for specific module
-- Requires Java 25 (`JAVA_HOME` must point to a JDK 25 installation, e.g. `/home/sofn/jdks/zulu25`)
+```bash
+./gradlew build                    # Full build (compile + spotless + test)
+./gradlew server-admin:bootRun     # Start Spring Boot (dev profile)
+./gradlew spotlessApply            # Auto-fix code formatting
+./gradlew spotlessCheck            # Check formatting only
+./gradlew test                     # Run all tests
+./gradlew :server-admin:test       # Run specific module tests
+./gradlew clean build              # Clean + full build
+```
 
-## Development
-
-- Main application entry point: `server-admin/src/main/java/com/lesofn/archsmith/server/admin/Application.java`
-- Default ports: Application (8080), Management (7002)
-- Development profile uses Testcontainers PostgreSQL (auto-started via `InitPostgreSQLServer`)
-- Testcontainers MinIO for S3-compatible file storage in dev
-- Hot reload enabled via Spring Boot devtools
-- Swagger UI available at: `http://localhost:8080/swagger-ui/index.html`
+- Requires **Java 25** — `JAVA_HOME` must point to JDK 25 (e.g. Azul Zulu)
+- Dev mode requires **Docker** — Testcontainers auto-starts PostgreSQL, Redis, MinIO
 
 ## Architecture
 
-This is a multi-module Spring Boot 4 project with clean architecture principles:
+Multi-module Spring Boot 4 project with DDD + Clean Architecture:
 
-### Module Structure
-- `common/`: Shared utilities and error handling
-  - `common-core`: Core utilities and shared components
-  - `common-error`: Centralized error handling and response formats
-- `domain/`: Domain-specific business logic modules
-  - `admin-user`: User management domain logic
-- `infrastructure/`: Cross-cutting infrastructure concerns (auth, logging, file storage, etc.)
-- `server-admin`: Web layer and main application entry point
-- `dependencies/`: Centralized dependency version management
-- `example/`: Example implementations
+```
+ArchSmith/
+├── common/common-core        # Utilities, enums, encryption, Jackson, base entities
+├── common/common-error       # ErrorCode, exceptions, error manager
+├── infrastructure/           # Auth, config, filters, file storage, database proxy
+├── domain/admin-user/        # User/Role/Menu/Dept domain entities + services
+├── server-admin/             # Controllers, Spring Boot entry point, security
+├── example/example-task/     # Example bounded context
+└── dependencies/             # Centralized version management (java-platform)
+```
 
 ### Key Patterns
-- Uses domain-driven design with separate modules for different bounded contexts
-- Authentication handled via JWT tokens with configurable expiration
-- Multi-datasource support with master/slave configuration via `dynamic-datasource-spring-boot4-starter`
-  - Datasource groups configured in YAML under `spring.datasource.dynamic.datasource`
-  - `GroupDataSourceProxy` bridges dynamic-datasource groups with JPA EntityManagerFactories
-  - `@DS("group_name")` annotation available for explicit datasource routing
-- Profile-based configuration (dev/test/prod) using standard Spring Boot `application-{profile}.yaml`
-- File storage abstraction: `FileStorageService` interface with `LocalFileStorageService` and `S3FileStorageService` implementations, configurable via `arch-smith.file-storage.type` (local/s3)
 
-## Dependencies
-
-- All dependency versions centrally managed in `dependencies/build.gradle.kts`
-- Spring Boot 4.0.5 with Java 25
-- Gradle 9.4.1 with configuration cache support
-- Key libraries: dynamic-datasource-spring-boot4-starter (multi-datasource + read/write split), Guava, Apache Commons, SpringDoc OpenAPI, AWS S3 SDK
-- Testing: JUnit 6, Testcontainers, Spock 2.4 (Groovy 5.x), RestClient integration tests
-- Database: PostgreSQL (all environments via Testcontainers in dev, real instance in prod)
+- **DDD rich domain model**: entities have business methods + state machines (e.g. `Task.complete()`, `OrderStatus.canTransitionTo()`)
+- **ScopedValue context**: `ScopedValueContext` replaces ThreadLocal for request context propagation (JDK 25)
+- **Structured Concurrency**: `StructuredTaskScope` for parallel operations (e.g. ServerMonitorService)
+- **Pattern Matching**: switch expressions with type patterns throughout error handling and JSON utils
+- **MapStruct**: `@Mapper` interfaces for Entity→DTO conversion (under `server-admin/.../mapper/`)
+- **Multi-datasource**: `dynamic-datasource-spring-boot4-starter` with master/slave + `GroupDataSourceProxy` for JPA
+- **JWT auth**: `JwtTokenUtil` + `JwtAuthenticationFilter` + Spring Security `SecurityFilterChain`
+- **File storage**: `FileStorageService` interface with Local and S3 implementations
+- **Problem Details**: RFC 9457 `ProblemDetail` for error responses
+- **Observation API**: Micrometer `Observation` in `RequestLogFilter` for metrics/tracing
+- **Stream Gatherers**: `CollectionUtils.partition()` via `Gatherers.windowFixed()`
 
 ## Code Style
 
-- Follow Alibaba Java coding guidelines: https://github.com/alibaba/Alibaba-Java-Coding-Guidelines
-- **Spotless + Google Java Style** enforced via `com.diffplug.spotless` plugin
-  - `./gradlew spotlessCheck`: Check code formatting
-  - `./gradlew spotlessApply`: Auto-fix formatting violations
-- Do not import `cn.hutool:hutool-all` - use standard JDK, Apache Commons, Guava, or Spring utilities instead
-- Lombok annotations used throughout for reducing boilerplate
-- Use Lombok annotations actively (@Data, @Getter, @Setter, @Builder, @RequiredArgsConstructor, etc.) but DO NOT use `var` keyword - always specify explicit types
+- **Spotless + Google Java Style** (AOSP 4-space indent) — enforced on build
+- **Lombok**: use `@Data`, `@Getter`, `@Setter`, `@Builder`, `@RequiredArgsConstructor`, `@Slf4j`
+- **DO NOT use `var`** — always specify explicit types
+- **DO NOT import `cn.hutool:hutool-all`** — use JDK, Apache Commons, Guava, or Spring
+- **DO NOT use field injection** — use constructor injection via `@RequiredArgsConstructor`
+- **JSpecify `@NullMarked`** on packages, `@Nullable` on nullable parameters/returns
+- Follow [Alibaba Java Coding Guidelines](https://github.com/alibaba/Alibaba-Java-Coding-Guidelines)
 
 ## Configuration
 
-- Standard Spring Boot profile-based config in `server-admin/src/main/resources/`:
-  - `application.yaml`: Shared base config (default profile: `dev`)
-  - `application-dev.yaml`: Dev profile (Testcontainers PostgreSQL + Redis + MinIO, DevTools)
-  - `application-test.yaml.example` / `application-prod.yaml.example`: Templates for test/prod
-  - Real `application-test.yaml` and `application-prod.yaml` are gitignored
-- Set active profile via `SPRING_PROFILES_ACTIVE` env var or JVM arg `-Dspring.profiles.active=...`
-- Logging: Single `log4j2-spring.xml` with `<SpringProfile>` — Console for dev, file-only for non-dev
-- Config prefix: `arch-smith`
+- Config prefix: `arch-smith` — mapped to `ArchSmithConfig` bean
+- Profiles: `dev` (default), `test`, `prod`
+  - `application.yaml`: base config
+  - `application-dev.yaml`: Testcontainers + DevTools
+  - `application-{test,prod}.yaml.example`: templates (real files gitignored)
+- Logging: Log4j2 via `log4j2-spring.xml` with `<SpringProfile>` sections
+- Database: PostgreSQL via Flyway migrations (`server-admin/src/main/resources/db/migration/`)
 
-## Docker
+## JDK 25 Features
 
-- `docker/jvm/`: JVM mode with Project Leyden CDS/AOT optimization (Azul Zulu 25)
-- `docker/native/`: Native Image mode with BellSoft Liberica NIK 25
-- `docker/docker-compose.yml`: JVM mode full stack (PostgreSQL + Redis + App + Nginx)
-- `docker/docker-compose.native.yml`: Native Image mode full stack
-- `docker/start.sh`: One-click startup script (`./start.sh jvm` or `./start.sh native`)
+- `--enable-preview` enabled globally (build.gradle.kts + processAot + processTestAot + bootRun)
+- `ScopedValue<RequestContext>` in `ScopedValueContext` (replaces ThreadLocal)
+- `StructuredTaskScope.open()` + `fork()` + `join()` for parallel tasks
+- `Gatherers.windowFixed()` for stream partitioning
+- Pattern matching `switch` with type patterns and `null` cases
+- `--enable-native-access=ALL-UNNAMED` for Netty compatibility
 
-## Monitoring
+## Testing
 
-- Health check: `http://localhost:8080/actuator/health`
-- Metrics: `http://localhost:8080/actuator/metrics`
-- Prometheus: `http://localhost:8080/actuator/prometheus`
-- **Micrometer + OpenTelemetry** integrated for distributed tracing and metrics
-  - OTLP tracing/metrics export configured per profile
-  - Dev: 100% sampling, Prod: 10% sampling
-  - OTLP endpoint configurable via `OTEL_EXPORTER_OTLP_ENDPOINT` env var (prod)
+- **Spock 2.4** (Groovy 5.x) for BDD tests — `src/test/groovy/`
+- **JUnit 6** (Jupiter) for unit tests — `src/test/java/`
+- **RestClient integration tests** — `RestClientIntegrationTest.java` (15 API tests)
+- **Testcontainers** in dev: PostgreSQL 17, Redis 7, MinIO (auto-started)
+- Test data: Flyway V2/V3 + `InitDbMockServer` SQL seed data
+
+## Dependencies
+
+All versions centrally managed in `dependencies/build.gradle.kts`:
+- Spring Boot 4.0.5, Gradle 9.4.1, PostgreSQL 42.7.10
+- Micrometer 1.6.4 + OpenTelemetry 1.55.0, Flyway 11.14.1
+- JSpecify 1.0.0, MapStruct 1.6.3, Lombok 1.18.44
+- Testcontainers 2.0.4, Spock 2.4, JUnit 6.0.3
